[package]
name = "catppuccin-egui"
version = "5.0.0"
authors = ["Sam Nystrom <sam@samnystrom.dev>"]
edition = "2021"
description = "Soothing pastel theme for egui."
documentation = "https://docs.rs/catppuccin-egui/"
readme = "README.md"
homepage = "https://github.com/catppuccin/egui"
repository = "https://github.com/catppuccin/egui"
license = "MIT"
keywords = ["egui", "catppuccin", "theme", "gui"]
categories = ["gui"]
exclude = ["assets/"]

[dependencies]
egui = "0.27"

[dev-dependencies]
eframe = "0.26"
