[package]
name = "catppuccin-egui"
version = "5.1.1"
authors = ["Sam Nystrom <sam@samnystrom.dev>"]
edition = "2021"
description = "Soothing pastel theme for egui."
documentation = "https://docs.rs/catppuccin-egui/"
readme = "README.md"
homepage = "https://github.com/catppuccin/egui"
repository = "https://github.com/catppuccin/egui"
license = "MIT"
keywords = ["egui", "catppuccin", "theme", "gui"]
categories = ["gui"]
exclude = ["assets/", "src/themes.rs.tera"]

[dependencies]
egui = { version = "0.28", default-features = false }
eframe = { version = "0.28", default-features = false }
