[workspace]
members = ["examples/todo"]

[package]
name = "catppuccin-egui"
version = "5.3.1"
authors = ["Sam Nystrom <sam@samnystrom.dev>"]
edition = "2021"
description = "Soothing pastel theme for egui."
documentation = "https://docs.rs/catppuccin-egui/"
readme = "README.md"
homepage = "https://github.com/catppuccin/egui"
repository = "https://github.com/catppuccin/egui"
license = "MIT"
keywords = ["egui", "catppuccin", "theme", "gui"]
categories = ["gui"]
exclude = ["assets/", "src/themes.rs.tera"]

[dependencies]
egui26 = { version = "0.26", package = "egui", default-features = false, optional = true }
egui27 = { version = "0.27", package = "egui", default-features = false, optional = true }
egui28 = { version = "0.28", package = "egui", default-features = false, optional = true }
egui29 = { version = "0.29", package = "egui", default-features = false, optional = true }
egui30 = { version = "0.30", package = "egui", default-features = false, optional = true }

[dev-dependencies]
eframe = "0.26"

[features]
default = ["egui26"]
